k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
  labels:
    app: restapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: petrpliska/express-example:1
        ports:
        - containerPort: 8000
