k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi
spec:
  selector:
    app: restapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
