k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi
  annotations:
    cert-manager.io/cluster-issuer: ipex-cloud-route53-letsencrypt-prod
spec:
  tls:
  - hosts:
      - restapi.ipex.cloud
    secretName: restapi-tls
  rules:
  - host: restapi.ipex.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi
            port:
              number: 80
